--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "scripting",
     "storage",
     "sidePanel",
-    "notifications"
+    "notifications",
+    "offscreen"
   ],
 
   "host_permissions": [
