docs: Rewrite README and TESTING_GUIDE with comprehensive documentation
- Add professional README with complete project overview
- Include installation guide, features, and architecture
- Add Chrome AI Challenge 2025 highlights
- Rewrite TESTING_GUIDE with step-by-step testing procedures
- Include debug commands, troubleshooting, and success criteria
- Add performance benchmarks and testing checklist
- Improve documentation structure and readability

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "scripting",
     "storage",
     "sidePanel",
-    "notifications"
+    "notifications",
+    "offscreen"
   ],
 
   "host_permissions": [
@@ -17,7 +18,11 @@
   ],
 
   "action": {
-    "default_popup": "popup.html"
+    "default_title": "SmartInsight - 对话模式"
+  },
+  
+  "side_panel": {
+    "default_path": "sidepanel.html"
   }, 
   "background": {
     "service_worker": "background.js"
@@ -34,10 +39,7 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "src/storage/database.js",
-        "src/ai/chrome-ai-manager.js",
-        "src/ui/chrome-ai-setup-guide.js",
-        "demo-comparison.html"
+        "offscreen.html"
       ],
       "matches": ["<all_urls>"]
     }
