--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "BrewLink",
   "version": "3.0.0",
   "description": " Chrome Built-in AI powered career assistant. 100% private LinkedIn analysis with Gemini Nano. Zero cost, offline-capable, instant insights.",
+  "icons": {
+    "16": "icon128.png",
+    "48": "icon128.png",
+    "128": "icon128.png"
+  },
 
   "permissions": [
     "activeTab",
