Update README, manifest, and sidepanel

--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
   ],
 
   "action": {
-    "default_title": "BrewLink - 对话模式"
+    "default_title": "BrewLink - Chat Mode"
   },
   
   "side_panel": {
